--- a/frames/movies.html
+++ b/frames/movies.html
@@ -514,7 +514,7 @@
                         </div>
                     </div>
                     <div id="movies" style="overflow-y:auto !important;">
-                        <div id="movieContainer" class="isotope" style="margin-top: 10px; margin-right:10px;">
+                        <div id="movieContainer" class="isotope">
                             <!-- Dynamic content here-->
                         </div>
                     </div>
