--- a/frames/series.html
+++ b/frames/series.html
@@ -653,7 +653,7 @@
                     </div>
 
                     <div id="series" style="overflow-y:auto !important;">
-                        <div id="serieContainer" class="isotope" style="margin-top: 10px; margin-right:10px;">
+                        <div id="serieContainer" class="isotope">
                             <!-- Dynamic content here -->
                         </div>
                     </div>
