--- a/frames/settings.html
+++ b/frames/settings.html
@@ -369,7 +369,7 @@
                         defaultsubtitle.attr('selected', 'selected');
                         $('#streamingPort').attr("placeholder", random);
                         $('#streamingPort').val('');
-                        $('#ytsEndpoint').attr("placeholder", 'http://yts.re/api/');
+                        $('#ytsEndpoint').attr("placeholder", 'https://yts.re/api/');
                         $('#ytsEndpoint').val('');
                         $('#eztvEndpoint').attr("placeholder", 'http://eztvapi.re/');
                         $('#eztvEndpoint').val('');
